// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content View ValueText should add title attribute 1`] = `
<div>
  <span
    class="dx-cardview-field-value dx-cardview-field-value--text-align-center dx-cardview-field-value--white-space-nowrap"
    title="TEST"
  >
    TEST
  </span>
</div>
`;

exports[`Content View ValueText should render highlighted text if passed 1`] = `
<div>
  <span
    class="dx-cardview-field-value dx-cardview-field-value--text-align-center dx-cardview-field-value--white-space-nowrap"
  >
    <span>
      USUAL_PART 
    </span>
    <span
      class="dx-cardview-field-value__text-part--highlighted"
    >
      MATCH_PART
    </span>
    <span>
       USUAL_PART
    </span>
  </span>
</div>
`;

exports[`Content View ValueText should render plain text if highlighted text is null 1`] = `
<div>
  <span
    class="dx-cardview-field-value dx-cardview-field-value--text-align-center dx-cardview-field-value--white-space-nowrap"
  >
    TEST_TEXT
  </span>
</div>
`;

exports[`Content View ValueText should set root classes 1`] = `
<div>
  <span
    class="dx-cardview-field-value dx-cardview-field-value--text-align-center dx-cardview-field-value--white-space-nowrap"
  >
    TEST
  </span>
</div>
`;
